--- a/Gen9-Parent/Gen9-Negocio/Gen9-Choferes/src/main/resources/application.properties
+++ b/Gen9-Parent/Gen9-Negocio/Gen9-Choferes/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Gen9-Choferes
+server.port=8090
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=SYSTEM
+spring.datasource.password=0529
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
+
+
+
+
