--- a/Gen9-Parent/Gen9-Negocio/pom.xml
+++ b/Gen9-Parent/Gen9-Negocio/pom.xml
@@ -15,7 +15,9 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>Gen9-Choferes</module>
+		<module>Gen9-Camiones</module>
 	</modules>
+	
 	
 	<properties>
 
